--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.1.1",
     "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
